[gd_scene load_steps=13 format=3 uid="uid://r134gcv5xi6c"]

[ext_resource type="Script" path="res://Backend/Code/Levels/Game_Base.gd" id="1_q8ybe"]
[ext_resource type="Texture2D" uid="uid://dopfqygkv0cp8" path="res://Frontend/Recourses/GameStart.png" id="2_whtth"]
[ext_resource type="Texture2D" uid="uid://0f6wmnlgh5fn" path="res://Frontend/Recourses/browser_13408985.png" id="3_6q07w"]
[ext_resource type="Texture2D" uid="uid://cgr1ruanqrx1b" path="res://Frontend/Recourses/wallpaper_monitor.png" id="3_otqod"]
[ext_resource type="Texture2D" uid="uid://berhbt8ceajj5" path="res://Frontend/Recourses/mail_9068642.png" id="4_ne52e"]
[ext_resource type="Texture2D" uid="uid://wj75lcanwg0g" path="res://Frontend/Recourses/vpn_9694717.png" id="6_fsr7a"]
[ext_resource type="Texture2D" uid="uid://piktxiednwh" path="res://Frontend/Recourses/browser.png" id="6_jwtpw"]
[ext_resource type="PackedScene" uid="uid://dkrkk78fdiww6" path="res://Frontend/Scenes/Instruments/Email.tscn" id="7_01e0d"]
[ext_resource type="PackedScene" uid="uid://qxtpt0gymowq" path="res://Frontend/Scenes/Instruments/VPN.tscn" id="8_cb5ns"]
[ext_resource type="PackedScene" uid="uid://j1gaj4y3ktw1" path="res://Frontend/Scenes/Instruments/WorkChat.tscn" id="9_8qum1"]
[ext_resource type="PackedScene" uid="uid://csuhyqjgu6da8" path="res://Frontend/Scenes/Instruments/RecordApp.tscn" id="10_4nepv"]
[ext_resource type="Texture2D" uid="uid://b3lw6fgd0ss12" path="res://Frontend/Recourses/arrow-down.png" id="11_l2ryp"]

[node name="GameBase" type="Node2D"]
script = ExtResource("1_q8ybe")

[node name="GameStart" type="Sprite2D" parent="."]
position = Vector2(578, 322)
scale = Vector2(0.8, 0.626953)
texture = ExtResource("2_whtth")

[node name="WallpaperMonitor" type="Sprite2D" parent="GameStart"]
position = Vector2(9.37494, -37.4829)
scale = Vector2(2.58414, 2.63453)
texture = ExtResource("3_otqod")

[node name="Button" type="Button" parent="GameStart"]
offset_left = -660.0
offset_top = -414.704
offset_right = -576.0
offset_bottom = -304.704
flat = true

[node name="Browser13408985" type="Sprite2D" parent="GameStart/Button"]
position = Vector2(42.5, 60.6105)
scale = Vector2(0.148926, 0.193146)
texture = ExtResource("3_6q07w")

[node name="Button2" type="Button" parent="GameStart"]
offset_left = -660.0
offset_top = -304.648
offset_right = -576.0
offset_bottom = -194.648
flat = true

[node name="Mail9068642" type="Sprite2D" parent="GameStart/Button2"]
position = Vector2(45, 57.4206)
scale = Vector2(0.151367, 0.193146)
texture = ExtResource("4_ne52e")

[node name="Button3" type="Button" parent="GameStart"]
offset_left = -660.0
offset_top = -194.592
offset_right = -576.0
offset_bottom = -84.5919
flat = true

[node name="Browser" type="Sprite2D" parent="GameStart/Button3"]
position = Vector2(45, 57.4206)
scale = Vector2(0.13916, 0.165109)
texture = ExtResource("6_jwtpw")

[node name="Button4" type="Button" parent="GameStart"]
offset_left = -660.0
offset_top = -86.131
offset_right = -576.0
offset_bottom = 23.869
flat = true

[node name="Vpn9694717" type="Sprite2D" parent="GameStart/Button4"]
position = Vector2(42.5001, 54.2305)
scale = Vector2(0.141602, 0.168224)
texture = ExtResource("6_fsr7a")

[node name="List_of_tasks" type="Panel" parent="GameStart"]
offset_left = 481.0
offset_top = -427.0
offset_right = 699.0
offset_bottom = -182.0

[node name="Color_List_of_tasks" type="ColorRect" parent="GameStart/List_of_tasks"]
modulate = Color(0.870588, 0.870588, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text_List_of_task" type="TextEdit" parent="GameStart/List_of_tasks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
editable = false

[node name="Email" parent="GameStart" instance=ExtResource("7_01e0d")]
visible = false
offset_left = -660.0
offset_top = -415.0
offset_right = -759.0
offset_bottom = -697.0

[node name="Vpn" parent="GameStart" instance=ExtResource("8_cb5ns")]
visible = false
offset_left = 390.0
offset_top = -142.0
offset_right = -771.0
offset_bottom = -726.0

[node name="WorkChat" parent="GameStart" instance=ExtResource("9_8qum1")]
visible = false
offset_left = -664.0
offset_top = -415.0
offset_right = -760.0
offset_bottom = -686.0

[node name="RecordApp" parent="GameStart" instance=ExtResource("10_4nepv")]
visible = false
offset_left = -666.0
offset_top = -415.0
offset_right = -765.0
offset_bottom = -688.0

[node name="Show_text" type="TextEdit" parent="."]
offset_left = 307.0
offset_top = 382.0
offset_right = 849.0
offset_bottom = 455.0
editable = false
wrap_mode = 1
metadata/_edit_use_anchors_ = true

[node name="VPN-Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(196, 300)
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_l2ryp")

[node name="Chat-Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(193, 233)
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_l2ryp")

[node name="Email-Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(193, 161)
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_l2ryp")

[node name="Internet-Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(194, 90)
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_l2ryp")

[node name="Tasks-Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(984, 106)
rotation = -1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_l2ryp")

[node name="Money-Arrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(922, 29)
rotation = -1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_l2ryp")

[node name="Panel" type="Panel" parent="."]
visible = false
offset_top = -3.0
offset_right = 1171.0
offset_bottom = 639.0
metadata/_edit_use_anchors_ = true

[node name="LineEdit" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -132.0
offset_right = 176.5
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2
text = "Congartulations on your first day"
alignment = 1

[node name="Next_day" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 493.0
offset_top = 275.0
offset_right = 663.0
offset_bottom = 325.0
text = "Next day"

[connection signal="pressed" from="GameStart/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GameStart/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GameStart/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GameStart/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Panel/Next_day" to="." method="_on_next_day_pressed"]
